@@ -51,6 +51,7 @@ public class MaxCnxnsTest extends ClientBase {
         }
 
         public void run() {
+            SocketChannel sChannel = null;
             try {
                 /*
                  * For future unwary socket programmers: although connect 'blocks' it
@@ -58,7 +59,7 @@ public class MaxCnxnsTest extends ClientBase {
                  * you can not assume that all the sockets are connected at the end of
                  * this for loop.
                  */
-                SocketChannel sChannel = SocketChannel.open();
+                sChannel = SocketChannel.open();
                 sChannel.connect(new InetSocketAddress(host,port));
                 // Construct a connection request
                 ConnectRequest conReq = new ConnectRequest(0, 0,
@@ -96,6 +97,15 @@ public class MaxCnxnsTest extends ClientBase {
             }
             catch (IOException io) {
                 // "Connection reset by peer"
+            }
+            finally {
+                if (sChannel != null) {
+                    try {
+                        sChannel.close();
+                    }
+                    catch (Exception e) {
+                    }
+                }
             }
         }
     }
