@@ -95,6 +95,10 @@ BUGFIXES:
   ZOOKEEPER-1837. Fix JMXEnv checks (potential race conditions)
   (Germán Blanco via fpj)
 
+  ZOOKEEPER-1849. Need to properly tear down tests in various
+  cases (Germán via fpj) 
+
+
 IMPROVEMENTS:
 
 
